working on request list
