# lab1/internal/docs/swagger.yaml
@@ -32,6 +32,13 @@ definitions:
       calculated_count:
         description: CalculatedCount - сколько формул рассчитано
         type: integer
+      individual_results:
+        description: |-
+          ==================== ДОБАВЛЯЕМ ПОЛЕ ДЛЯ ИНДИВИДУАЛЬНЫХ РЕЗУЛЬТАТОВ ====================
+          IndividualResults - результаты для каждого расчета (пациента)
+        items:
+          $ref: '#/definitions/ds.IndividualResult'
+        type: array
       total_result:
         description: TotalResult - результат расчета ДЖЕЛ от Django
         type: number
@@ -87,6 +94,17 @@ definitions:
     required:
     - card_id
     - pvlc_med_formula_id
+    type: object
+  ds.IndividualResult:
+    properties:
+      formula_id:
+        type: integer
+      individual_result:
+        type: number
+      input_height:
+        type: number
+      title:
+        type: string
     type: object
   ds.LoginMedUserRequest:
     properties:
